force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Macro__c/cgc_sync__Sync_Mobile_App_Macro__c.object-meta.xml
<CustomObject>
    <description>Contains color macros used for Themes</description>
    <label>Mobile App Theme Macro</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile App Theme Macros</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>