force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Macro__c/fields/cgc_sync__Color__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Color__c</fullName>
    <description>Color code for the mobile device control. Can be a color macro or an RGBA code.</description>
    <label>Color</label>
    <length>89</length>
    <type>Text</type>
</CustomField>