force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Macro__c/fields/cgc_sync__Description__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Description__c</fullName>
    <description>Explains where this color code is used on mobile device.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>