force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Macro__c/fields/cgc_sync__Macro_Type__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Macro_Type__c</fullName>
    <label>Macro Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>