force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Macro__c/fields/cgc_sync__Sync_Mobile_App_Theme__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Mobile_App_Theme__c</fullName>
    <description>Refers to the mobile app theme.</description>
    <label>Mobility Theme</label>
    <referenceTo>cgc_sync__Sync_Mobile_App_Theme__c</referenceTo>
    <relationshipLabel>Mobile App Theme Macros</relationshipLabel>
    <relationshipName>Sync_Mobile_App_Macros</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>