force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Macro__c/recordTypes/cgc_sync__Macro_Type.recordType-meta.xml
<RecordType>
    <fullName>cgc_sync__Macro_Type</fullName>
    <active>true</active>
    <label>Macro Type</label>
</RecordType>