force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Macro__c/validationRules/cgc_sync__SYNC_isValidName.validationRule-meta.xml
<ValidationRule>
    <fullName>cgc_sync__SYNC_isValidName</fullName>
    <active>true</active>
    <description>Checks if given String is a valid Name for Theming objects</description>
    <errorConditionFormula>!REGEX(Name, &apos;[a-zA-Z0-9]{1,80}|&apos;)</errorConditionFormula>
    <errorMessage>Invalid macro name. Only a-z, A-Z and 0-9 are allowed characters.</errorMessage>
</ValidationRule>